--- a/static/styles/scss/styles.scss
+++ b/static/styles/scss/styles.scss
@@ -1,123 +1,54 @@
-// ********** NORMALIZE ********** //
-body {
-    padding: 0;
-    margin: 0;
-    height: 100vh;
-}
-
-@mixin flexbox() {
-    display: flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-}
-
-@mixin pos-a-center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.pos-a {
-    position: absolute;
-}
-
-.pos-r {
-    position: relative;
-}
-
-.flex {
-    @include flexbox()
-}
-
-// ********** FONTS ********** //
-@import url('https://fonts.googleapis.com/css?family=Luckiest+Guy|Noto+Sans|Sigmar+One&display=swap');
-
-// h1 {
-//     font-family: 'Luckiest Guy', cursive;
-//     font-size: 3em;
-//     letter-spacing: .15em;
-//     -webkit-text-stroke: 0.5px black;
-//     text-shadow: 1px 1px black;
-//     text-align: center;
-// }
-
-// p {
-//     font-family: 'Luckiest Guy', cursive;
-//     font-size: 1.5em;
-//     letter-spacing: .15em;
-//     -webkit-text-stroke: 1px black;
-//     text-align: center;
-//     text-shadow: 1px 1px black;
-// }
-
-input {
-    margin: 5px;
-    padding: 5px;
-}
-
-// ********** COLORS ********** //
-
-$primary-blue: #0057F9;
-$primary-yellow: #FAD96E;
-$gradient-color: $primary-yellow;
-
 // Color scheme: https://coolors.co/ffff99-91bfff-ffd754-1034a6-0057f9
 
 // ********** INDEX ********** //
 
-.home-container {
-    // background-color: blue;
-    height: 100vh;
-    color: white;
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
+// .game-container {
+//     // background-color: blue;
+//     height: 100vh;
+//     color: white;
+//     width: 100%;
+//     height: 100%;
+//     margin: 0 auto;
 
 
-    -webkit-box-shadow: 0 0 25px 0 #fff;
-    background: $gradient-color;
+//     -webkit-box-shadow: 0 0 25px 0 #fff;
+//     background: $gradient-color;
 
-    background: -moz-linear-gradient(-45deg, $gradient-color 0%, $gradient-color 24%, #555555 25%, $gradient-color 26%, $gradient-color 50%, $gradient-color 74%, #555555 75%, $gradient-color 76%, $gradient-color 100%);
+//     background: -moz-linear-gradient(-45deg, $gradient-color 0%, $gradient-color 24%, #555555 25%, $gradient-color 26%, $gradient-color 50%, $gradient-color 74%, #555555 75%, $gradient-color 76%, $gradient-color 100%);
 
-    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, $gradient-color), color-stop(24%, $gradient-color), color-stop(25%, #555555), color-stop(26%, $gradient-color), color-stop(50%, $gradient-color), color-stop(74%, $gradient-color), color-stop(75%, #555555), color-stop(76%, $gradient-color), color-stop(100%, $gradient-color));
-    background: -webkit-linear-gradient(-45deg, $gradient-color 0%, $gradient-color 24%, #555555 25%, $gradient-color 26%, $gradient-color 50%, $gradient-color 74%, #555555 75%, $gradient-color 76%, $gradient-color 100%);
-    background: -o-linear-gradient(-45deg, $gradient-color 0%, $gradient-color 24%, #555555 25%, $gradient-color 26%, $gradient-color 50%, $gradient-color 74%, #555555 75%, $gradient-color 76%, $gradient-color 100%);
-    background: -ms-linear-gradient(-45deg, $gradient-color 0%, $gradient-color 24%, #555555 25%, $gradient-color 26%, $gradient-color 50%, $gradient-color 74%, #555555 75%, $gradient-color 76%, $gradient-color 100%);
-    background: linear-gradient(135deg, $gradient-color 0%, $gradient-color -10%, $gradient-color -24%, $gradient-color 54%, $gradient-color 97%, $gradient-color 136%, $gradient-color 195%, $gradient-color 4.8%, $gradient-color 70%);
+//     background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, $gradient-color), color-stop(24%, $gradient-color), color-stop(25%, #555555), color-stop(26%, $gradient-color), color-stop(50%, $gradient-color), color-stop(74%, $gradient-color), color-stop(75%, #555555), color-stop(76%, $gradient-color), color-stop(100%, $gradient-color));
+//     background: -webkit-linear-gradient(-45deg, $gradient-color 0%, $gradient-color 24%, #555555 25%, $gradient-color 26%, $gradient-color 50%, $gradient-color 74%, #555555 75%, $gradient-color 76%, $gradient-color 100%);
+//     background: -o-linear-gradient(-45deg, $gradient-color 0%, $gradient-color 24%, #555555 25%, $gradient-color 26%, $gradient-color 50%, $gradient-color 74%, #555555 75%, $gradient-color 76%, $gradient-color 100%);
+//     background: -ms-linear-gradient(-45deg, $gradient-color 0%, $gradient-color 24%, #555555 25%, $gradient-color 26%, $gradient-color 50%, $gradient-color 74%, #555555 75%, $gradient-color 76%, $gradient-color 100%);
+//     background: linear-gradient(135deg, $gradient-color 0%, $gradient-color -10%, $gradient-color -24%, $gradient-color 54%, $gradient-color 97%, $gradient-color 136%, $gradient-color 195%, $gradient-color 4.8%, $gradient-color 70%);
 
-    background-size: 70px 70px;
-    position: relative;
-    @include flexbox();
-}
+//     background-size: 70px 70px;
+//     position: relative;
+//     @include flexbox();
+// }
 
-.gradient {
-    position: absolute;
-    width: inherit;
-    height: inherit;
-    background: -moz-radial-gradient(center, ellipse cover, rgba(lighten($gradient-color, 20%), 0.25) 0%, rgba(lighten($gradient-color, 40%), 0) 100%);
-    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(lighten($gradient-color, 20%), 0.55)), color-stop(100%, rgba(lighten($gradient-color, 40%), 0)));
-    background: -webkit-radial-gradient(center, ellipse cover, rgba(lighten($gradient-color, 20%), 0.55) 0%, rgba(lighten($gradient-color, 40%), 0) 100%);
-    background: -o-radial-gradient(center, ellipse cover, rgba(lighten($gradient-color, 20%), 0.55) 0%, rgba(lighten($gradient-color, 40%), 0) 100%);
-    background: -ms-radial-gradient(center, ellipse cover, rgba(lighten($gradient-color, 20%), 0.55) 0%, rgba(lighten($gradient-color, 40%), 0) 100%);
-    background: radial-gradient(ellipse at center, rgba(lighten($gradient-color, 20%), 0.55) 0%, rgba(lighten($gradient-color, 40%), 0) 100%);
-}
+// .gradient {
+//     position: absolute;
+//     width: inherit;
+//     height: inherit;
+//     background: -moz-radial-gradient(center, ellipse cover, rgba(lighten($gradient-color, 20%), 0.25) 0%, rgba(lighten($gradient-color, 40%), 0) 100%);
+//     background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(lighten($gradient-color, 20%), 0.55)), color-stop(100%, rgba(lighten($gradient-color, 40%), 0)));
+//     background: -webkit-radial-gradient(center, ellipse cover, rgba(lighten($gradient-color, 20%), 0.55) 0%, rgba(lighten($gradient-color, 40%), 0) 100%);
+//     background: -o-radial-gradient(center, ellipse cover, rgba(lighten($gradient-color, 20%), 0.55) 0%, rgba(lighten($gradient-color, 40%), 0) 100%);
+//     background: -ms-radial-gradient(center, ellipse cover, rgba(lighten($gradient-color, 20%), 0.55) 0%, rgba(lighten($gradient-color, 40%), 0) 100%);
+//     background: radial-gradient(ellipse at center, rgba(lighten($gradient-color, 20%), 0.55) 0%, rgba(lighten($gradient-color, 40%), 0) 100%);
+// }
 
-.home-content {
-    flex-flow: column wrap;
-    width: 60%;
-    z-index: 100;
-}
+// .game-header {
+//     flex-flow: column wrap;
+//     width: 60%;
+//     z-index: 100;
+// }
 
-.rules-container {
-    position: absolute;
-    transform: rotate(-90deg);
-    top: 40px;
-    left: 0%;
-    box-shadow: 0px 3px 10px darken($gradient-color, 10%);
-}
+// .rules-container {
+//     position: absolute;
+//     transform: rotate(-90deg);
+//     top: 40px;
+//     left: 0%;
+//     box-shadow: 0px 3px 10px darken($gradient-color, 10%);
+// }
